--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "firebase": "^3.5.3",
+    "moment": "^2.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
